# geometry_stuff

./: README.md
multilinear/: .gitignore  README.md  pyproject.toml
multilinear/multilin/: lin_sys.py  misc_math.py  multilinear.py  multilinear_set.py
multilinear/tests/: test_lin.py
