[tool.poetry]
name = "multilin"
version = "0.1.0"
description = "Playing around with multilinear maps and sets"
authors = ["Andrew Wintenberg <awintenb@umich.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.3"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
